{
  "version": 4,
  "terraform_version": "1.0.8",
  "serial": 155,
  "lineage": "c430476b-b6cc-932c-5ee5-2591939630cc",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "ansible-server",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-00ddb0e5626798373",
            "arn": "arn:aws:ec2:us-east-1:035786644100:instance/i-00052055150682531",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "ansible-dynamic-inventory",
            "id": "i-00052055150682531",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "project_key",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-045ce096f0e2fd68b",
            "private_dns": "ip-10-0-10-197.ec2.internal",
            "private_ip": "10.0.10.197",
            "public_ip": "3.80.79.162",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0f8c83ef24f9532b7",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0de1fd886a78c7ae8",
            "tags": {
              "Name": "Ansible Server"
            },
            "tags_all": {
              "Name": "Ansible Server",
              "Owner": "Adi Ophir",
              "Project": "final-project"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-093e825d1836f33cf"
            ]
          },
          "dependencies": [
            "aws_iam_role.dynamic-inventory",
            "aws_key_pair.project_key",
            "aws_security_group.ansible-sg",
            "module.infra.aws_subnet.public",
            "module.infra.aws_vpc.ops-project",
            "module.infra.data.aws_availability_zones.zone",
            "tls_private_key.project_key",
            "aws_iam_instance_profile.dynamic-inventory"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "consul_servers",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-00ddb0e5626798373",
            "arn": "arn:aws:ec2:us-east-1:035786644100:instance/i-0c54bb79bf3134108",
            "associate_public_ip_address": false,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "opsschool-consul-join",
            "id": "i-0c54bb79bf3134108",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "project_key",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0395b5d341c6468b8",
            "private_dns": "ip-10-0-100-186.ec2.internal",
            "private_ip": "10.0.100.186",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0f53c657a3025ea1b",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0fe145f5d0492e65e",
            "tags": {
              "Name": "consul_server1",
              "consul_server": "true"
            },
            "tags_all": {
              "Name": "consul_server1",
              "Owner": "Adi Ophir",
              "Project": "final-project",
              "consul_server": "true"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-053c4ee3e5e9ffadc"
            ]
          },
          "dependencies": [
            "module.infra.aws_subnet.private",
            "module.infra.aws_vpc.ops-project",
            "module.infra.data.aws_availability_zones.zone",
            "tls_private_key.project_key",
            "aws_iam_instance_profile.consul-join",
            "aws_iam_role.consul-join",
            "aws_key_pair.project_key",
            "aws_security_group.consul_servers"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-00ddb0e5626798373",
            "arn": "arn:aws:ec2:us-east-1:035786644100:instance/i-0bbc44744c6e56c2c",
            "associate_public_ip_address": false,
            "availability_zone": "us-east-1b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "opsschool-consul-join",
            "id": "i-0bbc44744c6e56c2c",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "project_key",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-04075f2163895c571",
            "private_dns": "ip-10-0-101-182.ec2.internal",
            "private_ip": "10.0.101.182",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-067b80cdfa7308066",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-07e1db068644162b2",
            "tags": {
              "Name": "consul_server2",
              "consul_server": "true"
            },
            "tags_all": {
              "Name": "consul_server2",
              "Owner": "Adi Ophir",
              "Project": "final-project",
              "consul_server": "true"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-053c4ee3e5e9ffadc"
            ]
          },
          "dependencies": [
            "module.infra.aws_vpc.ops-project",
            "module.infra.data.aws_availability_zones.zone",
            "tls_private_key.project_key",
            "aws_iam_instance_profile.consul-join",
            "aws_iam_role.consul-join",
            "aws_key_pair.project_key",
            "aws_security_group.consul_servers",
            "module.infra.aws_subnet.private"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-00ddb0e5626798373",
            "arn": "arn:aws:ec2:us-east-1:035786644100:instance/i-0e1e32bf62289055c",
            "associate_public_ip_address": false,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "opsschool-consul-join",
            "id": "i-0e1e32bf62289055c",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "project_key",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-073209ea37d9f8fde",
            "private_dns": "ip-10-0-100-140.ec2.internal",
            "private_ip": "10.0.100.140",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-081e5a23c86db145e",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0fe145f5d0492e65e",
            "tags": {
              "Name": "consul_server3",
              "consul_server": "true"
            },
            "tags_all": {
              "Name": "consul_server3",
              "Owner": "Adi Ophir",
              "Project": "final-project",
              "consul_server": "true"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-053c4ee3e5e9ffadc"
            ]
          },
          "dependencies": [
            "aws_security_group.consul_servers",
            "module.infra.aws_subnet.private",
            "module.infra.aws_vpc.ops-project",
            "module.infra.data.aws_availability_zones.zone",
            "tls_private_key.project_key",
            "aws_iam_instance_profile.consul-join",
            "aws_iam_role.consul-join",
            "aws_key_pair.project_key"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "grafana",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-00ddb0e5626798373",
            "arn": "arn:aws:ec2:us-east-1:035786644100:instance/i-0cf9500df70e1baf0",
            "associate_public_ip_address": false,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "opsschool-consul-join",
            "id": "i-0cf9500df70e1baf0",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "project_key",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0ec812f59e12c1795",
            "private_dns": "ip-10-0-100-59.ec2.internal",
            "private_ip": "10.0.100.59",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-00f0df909fa47dde2",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0fe145f5d0492e65e",
            "tags": {
              "Name": "grafana"
            },
            "tags_all": {
              "Name": "grafana",
              "Owner": "Adi Ophir",
              "Project": "final-project"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0c900f3babe684d57"
            ]
          },
          "dependencies": [
            "aws_security_group.grafana-sg",
            "module.infra.aws_subnet.private",
            "module.infra.aws_vpc.ops-project",
            "module.infra.data.aws_availability_zones.zone",
            "tls_private_key.project_key",
            "aws_iam_instance_profile.consul-join",
            "aws_iam_role.consul-join",
            "aws_key_pair.project_key"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "jenkins_node",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-00ddb0e5626798373",
            "arn": "arn:aws:ec2:us-east-1:035786644100:instance/i-04b72485e6e62ccb6",
            "associate_public_ip_address": false,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "opsschool-jenkins_role",
            "id": "i-04b72485e6e62ccb6",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "project_key",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0b4cde66391ef7b75",
            "private_dns": "ip-10-0-100-108.ec2.internal",
            "private_ip": "10.0.100.108",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0e0560eb33de52c05",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0fe145f5d0492e65e",
            "tags": {
              "Name": "jenkins_agent1"
            },
            "tags_all": {
              "Name": "jenkins_agent1",
              "Owner": "Adi Ophir",
              "Project": "final-project"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-053c4ee3e5e9ffadc",
              "sg-05e07e20089011cc6"
            ]
          },
          "dependencies": [
            "aws_iam_instance_profile.jenkins_role",
            "aws_iam_role.jenkins_role",
            "aws_key_pair.project_key",
            "aws_security_group.consul_servers",
            "aws_security_group.jenkins",
            "module.infra.aws_subnet.private",
            "tls_private_key.project_key",
            "module.infra.aws_vpc.ops-project",
            "module.infra.data.aws_availability_zones.zone"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-00ddb0e5626798373",
            "arn": "arn:aws:ec2:us-east-1:035786644100:instance/i-015cb7184ca25e547",
            "associate_public_ip_address": false,
            "availability_zone": "us-east-1b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "opsschool-jenkins_role",
            "id": "i-015cb7184ca25e547",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "project_key",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0d8f7db1f82d56632",
            "private_dns": "ip-10-0-101-72.ec2.internal",
            "private_ip": "10.0.101.72",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0d08b9c950099c71c",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-07e1db068644162b2",
            "tags": {
              "Name": "jenkins_agent2"
            },
            "tags_all": {
              "Name": "jenkins_agent2",
              "Owner": "Adi Ophir",
              "Project": "final-project"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-053c4ee3e5e9ffadc",
              "sg-05e07e20089011cc6"
            ]
          },
          "dependencies": [
            "aws_iam_instance_profile.jenkins_role",
            "aws_security_group.consul_servers",
            "module.infra.aws_subnet.private",
            "tls_private_key.project_key",
            "aws_iam_role.jenkins_role",
            "aws_key_pair.project_key",
            "aws_security_group.jenkins",
            "module.infra.aws_vpc.ops-project",
            "module.infra.data.aws_availability_zones.zone"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "jenkins_server",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-07fdd1fb99f2ea3a6",
            "arn": "arn:aws:ec2:us-east-1:035786644100:instance/i-067ba0c3fb150225a",
            "associate_public_ip_address": false,
            "availability_zone": "us-east-1b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "opsschool-jenkins_role",
            "id": "i-067ba0c3fb150225a",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "project_key",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-00133cc5106210c83",
            "private_dns": "ip-10-0-101-82.ec2.internal",
            "private_ip": "10.0.101.82",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-04737b10bfce3be9d",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-07e1db068644162b2",
            "tags": {
              "Name": "jenkins_server"
            },
            "tags_all": {
              "Name": "jenkins_server",
              "Owner": "Adi Ophir",
              "Project": "final-project"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-053c4ee3e5e9ffadc",
              "sg-05e07e20089011cc6"
            ]
          },
          "dependencies": [
            "module.infra.aws_subnet.private",
            "module.infra.data.aws_availability_zones.zone",
            "tls_private_key.project_key",
            "aws_key_pair.project_key",
            "aws_security_group.consul_servers",
            "aws_security_group.jenkins",
            "aws_iam_instance_profile.jenkins_role",
            "aws_iam_role.jenkins_role",
            "module.infra.aws_vpc.ops-project"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "prometheus",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-00ddb0e5626798373",
            "arn": "arn:aws:ec2:us-east-1:035786644100:instance/i-05dea1a8ed551b540",
            "associate_public_ip_address": false,
            "availability_zone": "us-east-1b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "opsschool-consul-join",
            "id": "i-05dea1a8ed551b540",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "project_key",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-06f95153fc07101bb",
            "private_dns": "ip-10-0-101-148.ec2.internal",
            "private_ip": "10.0.101.148",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0ac879c08fefdbf51",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-07e1db068644162b2",
            "tags": {
              "Name": "prometheus"
            },
            "tags_all": {
              "Name": "prometheus",
              "Owner": "Adi Ophir",
              "Project": "final-project"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-071191d078358a715"
            ]
          },
          "dependencies": [
            "module.infra.aws_vpc.ops-project",
            "module.infra.data.aws_availability_zones.zone",
            "tls_private_key.project_key",
            "aws_iam_instance_profile.consul-join",
            "aws_iam_role.consul-join",
            "aws_key_pair.project_key",
            "aws_security_group.prometheus-sg",
            "module.infra.aws_subnet.private"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "grafana_server",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:035786644100:targetgroup/ALB-grafana/6fa2e66382b2a029",
            "arn_suffix": "targetgroup/ALB-grafana/6fa2e66382b2a029",
            "connection_termination": false,
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 5,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:035786644100:targetgroup/ALB-grafana/6fa2e66382b2a029",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "name": "ALB-grafana",
            "port": 3000,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "tags_all": {
              "Owner": "Adi Ophir",
              "Project": "final-project"
            },
            "target_type": "instance",
            "vpc_id": "vpc-0d6cbc675faeb6d4e"
          },
          "dependencies": [
            "module.infra.aws_vpc.ops-project"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ansible-sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:035786644100:security-group/sg-093e825d1836f33cf",
            "description": "security group for ansible server",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-093e825d1836f33cf",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 8,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "icmp",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "name": "ansible-sg",
            "name_prefix": "",
            "owner_id": "035786644100",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {
              "Owner": "Adi Ophir",
              "Project": "final-project"
            },
            "timeouts": null,
            "vpc_id": "vpc-0d6cbc675faeb6d4e"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.infra.aws_vpc.ops-project"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "consul_servers",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:035786644100:security-group/sg-053c4ee3e5e9ffadc",
            "description": "Allow ssh \u0026 consul inbound traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow all outside security group",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-053c4ee3e5e9ffadc",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow DNS",
                "from_port": 8600,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8600
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow agent join from the world",
                "from_port": 8301,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8301
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow agent join from the world",
                "from_port": 8302,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8302
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow consul UI access from the world",
                "from_port": 8500,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8500
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow service registration from the world",
                "from_port": 8300,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8300
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow ssh from the world",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [],
                "description": "Allow all inside security group",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": true,
                "to_port": 0
              }
            ],
            "name": "consul_servers",
            "name_prefix": "",
            "owner_id": "035786644100",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {
              "Owner": "Adi Ophir",
              "Project": "final-project"
            },
            "timeouts": null,
            "vpc_id": "vpc-0d6cbc675faeb6d4e"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.infra.aws_vpc.ops-project"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "grafana-LB_SG",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:035786644100:security-group/sg-027c21cdebd62a2cb",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "allow outbound traffic to anywhere",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-027c21cdebd62a2cb",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "allow http access from anywhere",
                "from_port": 3000,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 3000
              }
            ],
            "name": "grafana-LB_SG",
            "name_prefix": "",
            "owner_id": "035786644100",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {
              "Owner": "Adi Ophir",
              "Project": "final-project"
            },
            "timeouts": null,
            "vpc_id": "vpc-0d6cbc675faeb6d4e"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.infra.aws_vpc.ops-project"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "grafana-sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:035786644100:security-group/sg-0c900f3babe684d57",
            "description": "security group for grafana server",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0c900f3babe684d57",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 3000,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 3000
              }
            ],
            "name": "grafana-sg",
            "name_prefix": "",
            "owner_id": "035786644100",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {
              "Owner": "Adi Ophir",
              "Project": "final-project"
            },
            "timeouts": null,
            "vpc_id": "vpc-0d6cbc675faeb6d4e"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.infra.aws_vpc.ops-project"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "jenkins",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:035786644100:security-group/sg-05e07e20089011cc6",
            "description": "Allow Jenkins inbound traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow all outgoing traffic",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-05e07e20089011cc6",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 8080,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8080
              }
            ],
            "name": "jenkins",
            "name_prefix": "",
            "owner_id": "035786644100",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {
              "Owner": "Adi Ophir",
              "Project": "final-project"
            },
            "timeouts": null,
            "vpc_id": "vpc-0d6cbc675faeb6d4e"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.infra.aws_vpc.ops-project"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "jenkins-LB_SG",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:035786644100:security-group/sg-0d2a6d1fb86356185",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "allow outbound traffic to anywhere",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0d2a6d1fb86356185",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "allow http access from anywhere",
                "from_port": 8080,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8080
              }
            ],
            "name": "jenkins-LB_SG",
            "name_prefix": "",
            "owner_id": "035786644100",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {
              "Owner": "Adi Ophir",
              "Project": "final-project"
            },
            "timeouts": null,
            "vpc_id": "vpc-0d6cbc675faeb6d4e"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.infra.aws_vpc.ops-project"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "prometheus-sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:035786644100:security-group/sg-071191d078358a715",
            "description": "security group for prometheus server",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-071191d078358a715",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 9090,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 9090
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 9100,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 9100
              }
            ],
            "name": "prometheus-sg",
            "name_prefix": "",
            "owner_id": "035786644100",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {
              "Owner": "Adi Ophir",
              "Project": "final-project"
            },
            "timeouts": null,
            "vpc_id": "vpc-0d6cbc675faeb6d4e"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.infra.aws_vpc.ops-project"
          ]
        }
      ]
    },
    {
      "module": "module.infra",
      "mode": "managed",
      "type": "aws_eip",
      "name": "NAT-IP",
      "provider": "module.infra.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0ef22466bbd93917a",
            "association_id": "eipassoc-0400f6c06952b8bff",
            "domain": "vpc",
            "id": "eipalloc-0ef22466bbd93917a",
            "network_border_group": "us-east-1",
            "network_interface": "eni-08b1852a6baeff75d",
            "private_dns": "ip-10-0-10-82.ec2.internal",
            "private_ip": "10.0.10.82",
            "public_dns": "ec2-54-235-146-73.compute-1.amazonaws.com",
            "public_ip": "54.235.146.73",
            "public_ipv4_pool": "amazon",
            "vpc": true
          }
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0fe6db144c37189b5",
            "association_id": "eipassoc-0980869dc0b8bc1fd",
            "domain": "vpc",
            "id": "eipalloc-0fe6db144c37189b5",
            "network_border_group": "us-east-1",
            "network_interface": "eni-0c15b7b6ada8be96e",
            "private_dns": "ip-10-0-11-10.ec2.internal",
            "private_ip": "10.0.11.10",
            "public_dns": "ec2-35-170-25-212.compute-1.amazonaws.com",
            "public_ip": "35.170.25.212",
            "public_ipv4_pool": "amazon",
            "vpc": true
          }
        }
      ]
    },
    {
      "module": "module.infra",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "gateway",
      "provider": "module.infra.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:035786644100:internet-gateway/igw-0f729c6ca1ca23435",
            "id": "igw-0f729c6ca1ca23435",
            "owner_id": "035786644100",
            "tags": {
              "Name": "Gateway"
            },
            "tags_all": {
              "Name": "Gateway",
              "Owner": "Adi Ophir",
              "Project": "mid-project"
            },
            "vpc_id": "vpc-0d6cbc675faeb6d4e"
          },
          "dependencies": [
            "module.infra.aws_vpc.ops-project"
          ]
        }
      ]
    },
    {
      "module": "module.infra",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat",
      "provider": "module.infra.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0ef22466bbd93917a",
            "connectivity_type": "public",
            "id": "nat-08abcef013de45abf",
            "network_interface_id": "eni-08b1852a6baeff75d",
            "private_ip": "10.0.10.82",
            "public_ip": "54.235.146.73",
            "subnet_id": "subnet-0de1fd886a78c7ae8",
            "tags": {
              "Name": "NAT 1"
            },
            "tags_all": {
              "Name": "NAT 1",
              "Owner": "Adi Ophir",
              "Project": "mid-project"
            }
          },
          "dependencies": [
            "module.infra.data.aws_availability_zones.zone",
            "module.infra.aws_eip.NAT-IP",
            "module.infra.aws_subnet.public",
            "module.infra.aws_vpc.ops-project"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0fe6db144c37189b5",
            "connectivity_type": "public",
            "id": "nat-02901b4e550dbe992",
            "network_interface_id": "eni-0c15b7b6ada8be96e",
            "private_ip": "10.0.11.10",
            "public_ip": "35.170.25.212",
            "subnet_id": "subnet-0074f379783d8a8dc",
            "tags": {
              "Name": "NAT 2"
            },
            "tags_all": {
              "Name": "NAT 2",
              "Owner": "Adi Ophir",
              "Project": "mid-project"
            }
          },
          "dependencies": [
            "module.infra.aws_eip.NAT-IP",
            "module.infra.aws_subnet.public",
            "module.infra.aws_vpc.ops-project",
            "module.infra.data.aws_availability_zones.zone"
          ]
        }
      ]
    },
    {
      "module": "module.infra",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "module.infra.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:035786644100:route-table/rtb-0ac2fd71caf581eea",
            "id": "rtb-0ac2fd71caf581eea",
            "owner_id": "035786644100",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-08abcef013de45abf",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "Private RTB 1"
            },
            "tags_all": {
              "Name": "Private RTB 1",
              "Owner": "Adi Ophir",
              "Project": "mid-project"
            },
            "timeouts": null,
            "vpc_id": "vpc-0d6cbc675faeb6d4e"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.infra.aws_vpc.ops-project"
          ]
        }
      ]
    },
    {
      "module": "module.infra",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "module.infra.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:035786644100:route-table/rtb-048204d651de763d4",
            "id": "rtb-048204d651de763d4",
            "owner_id": "035786644100",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0f729c6ca1ca23435",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "Public RTB"
            },
            "tags_all": {
              "Name": "Public RTB",
              "Owner": "Adi Ophir",
              "Project": "mid-project"
            },
            "timeouts": null,
            "vpc_id": "vpc-0d6cbc675faeb6d4e"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.infra.aws_vpc.ops-project"
          ]
        }
      ]
    },
    {
      "module": "module.infra",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "module.infra.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:035786644100:subnet/subnet-0fe145f5d0492e65e",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.100.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0fe145f5d0492e65e",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "035786644100",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "PrivateSubnet 1"
            },
            "tags_all": {
              "Name": "PrivateSubnet 1",
              "Owner": "Adi Ophir",
              "Project": "mid-project"
            },
            "vpc_id": "vpc-0d6cbc675faeb6d4e"
          },
          "dependencies": [
            "module.infra.aws_vpc.ops-project",
            "module.infra.data.aws_availability_zones.zone"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:035786644100:subnet/subnet-07e1db068644162b2",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.101.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-07e1db068644162b2",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "035786644100",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "PrivateSubnet 2"
            },
            "tags_all": {
              "Name": "PrivateSubnet 2",
              "Owner": "Adi Ophir",
              "Project": "mid-project"
            },
            "vpc_id": "vpc-0d6cbc675faeb6d4e"
          },
          "dependencies": [
            "module.infra.data.aws_availability_zones.zone",
            "module.infra.aws_vpc.ops-project"
          ]
        }
      ]
    },
    {
      "module": "module.infra",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "module.infra.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:035786644100:subnet/subnet-0de1fd886a78c7ae8",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.10.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0de1fd886a78c7ae8",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "035786644100",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "PublicSubnet , 1"
            },
            "tags_all": {
              "Name": "PublicSubnet , 1",
              "Owner": "Adi Ophir",
              "Project": "mid-project"
            },
            "vpc_id": "vpc-0d6cbc675faeb6d4e"
          },
          "dependencies": [
            "module.infra.aws_vpc.ops-project",
            "module.infra.data.aws_availability_zones.zone"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:035786644100:subnet/subnet-0074f379783d8a8dc",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.11.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0074f379783d8a8dc",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "035786644100",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "PublicSubnet , 2"
            },
            "tags_all": {
              "Name": "PublicSubnet , 2",
              "Owner": "Adi Ophir",
              "Project": "mid-project"
            },
            "vpc_id": "vpc-0d6cbc675faeb6d4e"
          },
          "dependencies": [
            "module.infra.aws_vpc.ops-project",
            "module.infra.data.aws_availability_zones.zone"
          ]
        }
      ]
    },
    {
      "module": "module.infra",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "ops-project",
      "provider": "module.infra.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:035786644100:vpc/vpc-0d6cbc675faeb6d4e",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0ff326faed2aa529c",
            "default_route_table_id": "rtb-0e729f9f9e0e5d83a",
            "default_security_group_id": "sg-06b3f7553297a66ac",
            "dhcp_options_id": "dopt-08621d5307f53b529",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "id": "vpc-0d6cbc675faeb6d4e",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-0e729f9f9e0e5d83a",
            "owner_id": "035786644100",
            "tags": {
              "Name": "ops-project"
            },
            "tags_all": {
              "Name": "ops-project",
              "Owner": "Adi Ophir",
              "Project": "mid-project"
            }
          }
        }
      ]
    }
  ]
}